tests/NormalTests/paczka2/big_fuzzy/13187334.err
Error in line 3: HDt A798 95,0
Error in line 6: 8gkgdr A798 60,1
Error in line 9: 8gkgdr A911 23,5
Error in line 5: fWj1wDy A798 35,9
Error in line 7: HDt S41 5,0
Error in line 16: 1ozS A911 24,0
Error in line 19: 1ozS A798 84,5
Error in line 30: HDt A911 56,0
Error in line 39: duPE A798 -1,8
Error in line 35: HDt A911 76,7
Error in line 26: 1ozS A911 66,2
Error in line 52: A798 A798 83,2
Error in line 49: 1ozS A595 20,4
Error in line 53: A798 S41 1,9
Error in line 63: A798 A798 86,5
Error in line 65: fWj1wDy A798 59,0
Error in line 57: HDt A595 32,3
Error in line 74: HDt A798 0,6
Error in line 36: duPE A798 11,5
Error in line 82: fWj1wDy A911 45,4
Error in line 90: HDt A595 69,7
Error in line 99: HDt S41 -1,7
Error in line 103: fWj1wDy A798 54,3
Error in line 86: tme3 A798 0,6
Error in line 104: fWj1wDy A595 69,8
Error in line 98: HDt S41 28,9
Error in line 121: HDt A595 18,8
Error in line 128: 1ozS A798 23,2
Error in line 130: fWj1wDy A798 12,7
Error in line 126: tme3 A595 15,7
Error in line 116: duPE A798 81,4
Error in line 138: duPE S41 76,0
Error in line 135: 8gkgdr A595 0,3
Error in line 170: fWj1wDy A798 42,98
Error in line 172: tme3 S41 80,9
Error in line 167: fWj1wDy A911 83,1
Error in line 180: tme3 A911 4,7
Error in line 188: duPE A798 2,2
Error in line 183: fWj1wDy A798 16,3
Error in line 216: HDt Su1 61,6
Error in line 222: tme3 S41 33,7
Error in line 220: 1ozS S41 291,2
Error in line 239: A798 A798 9,16
Error in line 238: 1ozS A595 97,6
